# fio_taskio

./: .gitignore  README.md  docstring_template.mustache  pyproject.toml  replacements.txt
notebooks/: sandbox.py
scripts/: helpers.py
src/: config.py  helpers.py  manage.py
src/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py  0002_rename_date_hired_taskiouser_date_operational_and_more.py  0003_alter_taskiouser_incorporation_status.py
src/apps/billings/: admin.py  models.py  services.py  urls.py  views.py
src/apps/billings/migrations/: 0001_initial.py
src/apps/crm/: admin.py  forms.py  models.py  services.py  urls.py  views.py
src/apps/crm/migrations/: 0001_initial.py  0002_seed_service_categories.py
src/static/assets/js/: phoenix.js  phoenix.js.map
src/static/assets/js/dashboards/: travel-agency-dashboard.js  travel-agency-dashboard.js.map
src/static/assets/js/pages/: trip.js  trip.js.map
src/taskio/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/accounts/forms/: agent_login.html
src/templates/accounts/main/: customer_registration.html
src/templates/crm/agent_dashboard/: agent_dashboard.html  agent_dashboard_profile.html
src/templates/crm/forms/: lead_create.html  public_request.html
src/templates/crm/main/: client_list.html  customer_registration.html  customer_view.html  lead_list.html
src/templates/crm/success_fail/: success.html
src/templates/inheritance/: account_parent.html  authentication_parent.html  dashboard_parent.html  split_forms_parent.html  success_fail_parent.html
src/templates/main/: landing.html
