[project]
name = "fio_pskel"
version = "0.1.0"
description = " is the skeleton and starting point for all FIO projects"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "FlintIO" }]

dependencies = [
]

[project.optional-dependencies]
# Machine Learning tooling
ml = [

]

# API tooling
api = [

]

# Dev tooling
dev = [
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fio_pskel"]

[tool.hatch.build.targets.sdist]
include = ["src/fio_pskel", "README.md", "pyproject.toml"]

[browser]
gatherUsageStats = false

